--- a/amor-india/package.json
+++ b/amor-india/package.json
@@ -23,8 +23,9 @@
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-swiper": "^1.5.14",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-viewpager": "^0.2.13",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
