--- a/amor-india/package.json
+++ b/amor-india/package.json
@@ -19,8 +19,9 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.3.0",
+    "react-native-gesture-handler": "~1.5.0",
     "react-native-paper": "^3.2.1",
+    "react-native-razorpay": "^2.1.31",
     "react-native-reanimated": "^1.2.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-swiper": "^1.6.0-rc.3",
