--- a/.gitignore
+++ b/.gitignore
@@ -387,4 +387,12 @@ DerivedData/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 assets/
-
+*.jpg
+*.jpeg
+*.plugins
+*.otf
+*.png
+*.csv
+*.pdf
+database/
+practice/
