--- a/amor-india/package.json
+++ b/amor-india/package.json
@@ -10,17 +10,24 @@
   "dependencies": {
     "@twotalltotems/react-native-otp-input": "^1.1.2",
     "aws-amplify": "^1.2.4",
-    "aws-sdk": "^2.590.0",
+    "aws-sdk": "^2.653.0",
     "axios": "^0.19.0",
     "expo": "~36.0.0",
-    "npm": "^6.13.4",
+    "expo-location": "~8.0.0",
+    "expo-permissions": "~8.0.0",
+    "lottie-react-native": "~2.6.1",
+    "npm": "^6.14.2",
     "opencollective-postinstall": "^2.0.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-animated-loader": "0.0.8",
     "react-native-elements": "^1.2.7",
+    "react-native-fast-image-expo": "0.0.5",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-image-progress": "^1.1.1",
     "react-native-paper": "^3.2.1",
+    "react-native-progress": "^4.0.3",
     "react-native-razorpay": "^2.1.31",
     "react-native-reanimated": "^1.2.0",
     "react-native-splash-screen": "^3.2.0",
