--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -1,2 +1,5 @@
 LAMBDA_REGION=ap-south-1
-POSTGRES_URI=postgres://amorindia:Amorindia123@amor.c1jojmbr9vbp.us-east-1.rds.amazonaws.com:5432/postgres
+POSTGRES_URI=amorindia://postgres:Amorindia123@amorindia.chryi8quldji.ap-south-1.rds.amazonaws.com:5432/amorindia
+CLOUDFRONT_URL=https://d182bv3lioi4mj.cloudfront.net/
+BUCKET_NAME=amor-india
+BANNER_OBJECT_NAME=Banner/
