--- a/backend/package.json
+++ b/backend/package.json
@@ -5,19 +5,16 @@
   "main": "handler.js",
   "dependencies": {
     "aws-sdk": "^2.601.0",
-    "papaparse": "^5.0.2",
     "pg": "^7.12.1",
-    "serverless-api-gateway-caching": "^1.4.1",
-    "timekeeper": "^2.2.0",
-    "uuid": "^3.3.3"
+    "serverless-api-gateway-caching": "^1.4.1"
   },
   "devDependencies": {
     "serverless-offline": "^5.10.1",
     "serverless-dotenv-plugin": "^2.1.1"
   },
   "scripts": {
-    "deploy": "sls deploy --env dev --aws-profile babutabhavyaDev --force",
-    "start": "sls offline start --env dev --aws-profile babutabhavyaDev"
+    "deploy": "sls deploy --env dev --aws-profile amor-apparels",
+    "start": "sls offline start --env dev --aws-profile amor-apparels"
   },
   "author": "",
   "license": "ISC"
